# MarcLinkFinc

./: .cursorrules  .gitignore  .windsurfrules  LICENSE  README.md  logging.toml  marc2finc.py  marc_example.py  models.py  notebook.py  pyproject.toml  requirements.txt  technical.md  test_marc.py  user.md
.cursor/rules/: python.mdc
.devcontainer/: Dockerfile  devcontainer.json
doc/: Finc.md  finc__author.md  finc__author2.md  finc__author2_role.md  finc__author_corporate.md  finc__author_corporate_role.md  finc__author_role.md  finc__author_sort.md  finc__id.md  finc__isbn.md  finc__record_id.md  finc__recordtype.md  finc__title.md  finc__topic.md  index.md
help/: __init__.py  linkml_generator.py  logging.py  marc_utils.py  slublogging.py
models/: dataclass.py
samples/: index.slub.tit.properties  output.mrc
schema/: book.yaml  finc.yaml
slubmodels/: __init__.py  dataclass.py  dataclass_model.py  pydantic.py  pydantic_model.py
