[project]
name = "marclinkfinc"
version = "0.1.0"
description = "Demo Projekt für MarcLinkFinc"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "linkml>=1.8.6",
    "marimo>=0.10.14",
    "pymarc>=5.2.3",
]

[dependency-groups]
dev = [
    "google-generativeai>=0.8.3",
    "linkml-runtime>=1.8.3",
    "ruff>=0.9.2",
]
