[project]
name = "marclinkfinc"
version = "0.1.0"
description = "Demo Projekt für MarcLinkFinc"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "linkml>=1.8.6",
    "marimo>=0.10.14",
    "pymarc>=5.2.3",
    "tomli>=2.0.1",
]

[dependency-groups]
dev = [
    "google-generativeai>=0.8.3",
    "linkml-runtime>=1.8.3",
    "ruff>=0.9.2",
]
